@@ -450,6 +450,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #2134: A new attribute that specifies the exact type of token.OP
+  tokens has been added to tokenize.TokenInfo.
+
 - Issue #13722: Avoid silencing ImportErrors when initializing the codecs
   registry.
 
